--- a/sportsee/src/components/LeftNav/LeftNav.css
+++ b/sportsee/src/components/LeftNav/LeftNav.css
@@ -15,9 +15,10 @@
 
 .leftnav_container{
     width: 117px;
-    height: 1024px;
+    height: 100%;
     background-color: #020203;
-
+    position: fixed;
+    z-index: 1;
 }
 
 .leftnav_navigation{
