résolution du problème api, ajout des données dans les graphes

--- a/sportsee/src/components/ChartGoal/ChartGoal.css
+++ b/sportsee/src/components/ChartGoal/ChartGoal.css
@@ -29,7 +29,7 @@
     font-weight: 700;
     text-align: center;
     color: #74798c;
-    background: #FBFBFB;
+    background: rgb(251, 251, 251);
     border-radius: 50%;
 }
 
