--- a/sportsee/src/components/Thumbnail/Thumbnail.css
+++ b/sportsee/src/components/Thumbnail/Thumbnail.css
@@ -1,8 +1,8 @@
 .thumbnail-container{
-    display:flex;
-    padding:2em;
+    display: flex;
+    padding: 1.5em;
     width: 258px;
-    height: 124px;
+    /* height: 124px; */
     background: #FBFBFB;
     border-radius: 5px;
 }
