correction indentation et ajout de la page

--- a/sportsee/src/components/Header/Header.css
+++ b/sportsee/src/components/Header/Header.css
@@ -1,35 +1,35 @@
-.logo_sportsee{
-    width: 178px;
-    height: 60.93px;
-    margin-right: 150px;
-    margin-left: 26px;
+.logo_sportsee {
+  width: 178px;
+  height: 60.93px;
+  margin-right: 150px;
+  margin-left: 26px;
 }
 
-.header_container{
-    background-color: #020203;
-    height: 91px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    z-index: 2;
+.header_container {
+  background-color: #020203;
+  height: 91px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  z-index: 2;
 }
 
-.header_navigation{
-    width: 994px;
-    height: 24px;
-    top: 36px;
-    left: 355px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.header_navigation {
+  width: 994px;
+  height: 24px;
+  top: 36px;
+  left: 355px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.link_nav{
-    font-family: 'Roboto';
-    font-weight: 500;
-    size: 24px;
-    line-height: 24px;
-    width: 88px;
-    color: white;
-    text-decoration: none;
+.link_nav {
+  font-family: "Roboto";
+  font-weight: 500;
+  size: 24px;
+  line-height: 24px;
+  width: 88px;
+  color: white;
+  text-decoration: none;
 }
