--- a/sportsee/src/components/BarCharts/BarCharts.css
+++ b/sportsee/src/components/BarCharts/BarCharts.css
@@ -1,82 +1,81 @@
-.barchats-containers{
-    width: 835px;
-    height: 320px;
-    font-family: Roboto;
-    border-radius: 5px;
-    background: rgb(251, 251, 251);
-    box-shadow: rgba(0, 0, 0, 0.02) 0px 2px 4px;
-    padding: 25px;
+.barchats-containers {
+  width: 835px;
+  height: 320px;
+  font-family: Roboto;
+  border-radius: 5px;
+  background: rgb(251, 251, 251);
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 2px 4px;
+  padding: 25px;
 }
 
-.barchats-header{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 2.5rem;
-    margin-right: 1.5rem;
+.barchats-header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 2.5rem;
+  margin-right: 1.5rem;
 }
 
-.barchats-legends{
-    display: flex;
+.barchats-legends {
+  display: flex;
 }
 
-.barchats-infos{
-    display: flex;
-    align-items:center;
+.barchats-infos {
+  display: flex;
+  align-items: center;
 }
 
-.barchats-title{
-    font-size: 15px;
-    font-weight: 500;
-    line-height: 24px;
-    text-align: left;
-    width: 135px;
-    height: 24px;
-    top: 24px;
-    left: 32px;
-    color: #20253A;
+.barchats-title {
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: left;
+  width: 135px;
+  height: 24px;
+  top: 24px;
+  left: 32px;
+  color: #20253a;
 }
 
-.barchats-icon_poids{
-    height: 8px;
-	width: 8px;
-	border-radius: 50%;
-	background-color: #282D30;
-	align-self: center;
-	margin-left: 30px;
+.barchats-icon_poids {
+  height: 8px;
+  width: 8px;
+  border-radius: 50%;
+  background-color: #282d30;
+  align-self: center;
+  margin-left: 30px;
 }
 
-.barchats-description_poids{
-    width: 64px;
-    height: 24px;
-    top: 23px;
-    left: 550px;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 24px;
-    text-align: left;
-    color: #74798C;
-    margin-left: 10px;
+.barchats-description_poids {
+  width: 64px;
+  height: 24px;
+  top: 23px;
+  left: 550px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: left;
+  color: #74798c;
+  margin-left: 10px;
 }
 
-.barchats-icon_cal{
-    height: 8px;
-	width: 8px;
-	border-radius: 50%;
-	background-color: #E60000;
-	align-self: center;
-	margin-left: 30px;
+.barchats-icon_cal {
+  height: 8px;
+  width: 8px;
+  border-radius: 50%;
+  background-color: #e60000;
+  align-self: center;
+  margin-left: 30px;
 }
 
-.barchats-description_cal{
-    width: 143px;
-    height: 24px;
-    top: 24px;
-    left: 666px;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 24px;
-    text-align: left;
-    color: #74798C;
-    margin-left: 10px;
+.barchats-description_cal {
+  width: 143px;
+  height: 24px;
+  top: 24px;
+  left: 666px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: left;
+  color: #74798c;
+  margin-left: 10px;
 }
-
