--- a/sportsee/src/components/ContextButton/ContextButton.css
+++ b/sportsee/src/components/ContextButton/ContextButton.css
@@ -1,4 +1,25 @@
 .button-mocked {
-    margin-top: 15px;
-    width: 150px;
+  margin-top: 15px;
+  width: 150px;
+  text-decoration: none;
+  padding: 10px;
+  font-family: arial;
+  font-size: 1em;
+  color: #ffffff;
+  background-color: #ff0000;
+  border-radius: 24px;
+  -webkit-border-radius: 24px;
+  -moz-border-radius: 24px;
+  border: 4px solid #ffffff;
+  box-shadow: 3px 3px 12px #444444;
+  -webkit-box-shadow: 3px 3px 12px #444444;
+  -moz-box-shadow: 3px 3px 12px #444444;
 }
+
+.button-mocked:hover {
+  padding: 10px;
+  background-color: #000000;
+  box-shadow: 1px 1px 4px #777777;
+  -webkit-box-shadow: 1px 1px 4px #777777;
+  -moz-box-shadow: 1px 1px 4px #777777;
+  }
