--- a/sportsee/src/components/RadarCharts/RadarCharts.css
+++ b/sportsee/src/components/RadarCharts/RadarCharts.css
@@ -1,8 +1,8 @@
-.radar-container{
-    position: relative;
-	width: 258px;
-	height: 263px;
-	background: #282D30;
-	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0212249);
-	border-radius: 5px;
+.radar-container {
+  position: relative;
+  width: 258px;
+  height: 263px;
+  background: #282d30;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0212249);
+  border-radius: 5px;
 }
