--- a/sportsee/src/components/Thumbnail/Thumbnail.css
+++ b/sportsee/src/components/Thumbnail/Thumbnail.css
@@ -1,29 +1,29 @@
-.thumbnail-container{
-    display: flex;
-    padding: 1.5em;
-    width: 258px;
-    /* height: 124px; */
-    background: #FBFBFB;
-    border-radius: 5px;
+.thumbnail-container {
+  display: flex;
+  padding: 1.5em;
+  width: 258px;
+  /* height: 124px; */
+  background: #fbfbfb;
+  border-radius: 5px;
 }
 
-.thumbnail-infos{
-    display:flex;
-    flex-direction:column;
-    margin-left:24px;
+.thumbnail-infos {
+  display: flex;
+  flex-direction: column;
+  margin-left: 24px;
 }
 
-.thumbnail-user{
-    font-weight: bold;
-    font-size: 20px;
-    line-height: 24px;
-    color: #282D30;
-    margin-bottom:2px;
+.thumbnail-user {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 24px;
+  color: #282d30;
+  margin-bottom: 2px;
 }
 
-.thumbnail-unit{
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 24px;
-    color: #74798C;
+.thumbnail-unit {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 24px;
+  color: #74798c;
 }
