--- a/sportsee/src/components/Tooltip/Tooltip.css
+++ b/sportsee/src/components/Tooltip/Tooltip.css
@@ -1,16 +1,16 @@
-.tooltip-container{
-    background-color:#E60000;
-    width:55px;
-    height:75px;
-    display:flex;
-    flex-direction:column;
-    align-items:center;
+.tooltip-container {
+  background-color: #e60000;
+  width: 55px;
+  height: 75px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.tooltip-infos{
-    color:white;
-    font-weight: 500;
-    font-size: 10px;
-    line-height: 24px;
-    margin-top:7px;
+.tooltip-infos {
+  color: white;
+  font-weight: 500;
+  font-size: 10px;
+  line-height: 24px;
+  margin-top: 7px;
 }
