--- a/sportsee/src/pages/User/User.css
+++ b/sportsee/src/pages/User/User.css
@@ -1,47 +1,36 @@
 main {
-    width: 1126px;
-    height: 779px;
-    top: 159px;
-    left: 224px;
-
+  width: 1126px;
+  height: 779px;
+  top: 159px;
+  left: 224px;
 }
 
-.chart-container{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 2em;
-    width: 910px;
-    margin-top: 40px;
-
+.chart-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 2em;
+  width: 910px;
+  margin-top: 40px;
 }
 
-.chart-content{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+.chart-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
-.user-chart_containers{
-    max-width: 1240px;
-    width: 100%;
-    margin: auto;
-    margin-top: 2%;
-    display: flex;
-    flex-wrap: wrap;
+.dashboard_containers {
+  display: flex;
+  margin-left: 10%;
+  margin-top: 3%;
 }
-
-.thumbnail-wrapper{
-    display: flex;
-    /* flex-wrap: wrap; */
-    justify-content: space-between;
-    max-width: 835px;
-    flex-direction: column;
-    height: 670px;
-    margin: auto;
-    margin-left: 2rem;
-    width: 256px;
-    margin-top: -370px;
+.thumbnail-wrapper {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  margin: top;
+  margin-top: 130px;
 }
 
